@startuml convert.status

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram imcludes
!include ../../GameCommunication/packages/convert.puml

' class diagram (https://plantuml.com/class-diagram)
$package(plaintext.convert.status) {
    abstract class VisitableCellStatusConverter<T: VisitableCellStatus> <<abstract>> {
        + serialize(visitableStatus: T): String
        # parse(parts: String[], enemyIndex: int, provider: VisitableCellStatusProvider<T>): T
    }
    communication.convert.Converter <|.. VisitableCellStatusConverter

    interface VisitableCellStatusProvider<T: VisitableCellStatus> <<interface>> {
        + create(enemyDistance: int): T
    }

    class WallCellStatusConverter {
        + serialize(wallStatus: WallCellStatus): String
        + parse(data: String): WallCellStatus
    }
    communication.convert.Converter <|.. WallCellStatusConverter : <<bind>> <T -> WallCellStatus>
}

@enduml
